# rust-ndarray-to-dlpack

./: Cargo.toml  README.md  dlpack.h  main.py  make-link.sh
src/: dlpack.rs  lib.rs
