[package]
name = "rust-ndarray-to-dlpack"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"



[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[lib]
name = "string_sum"
crate-type = ["cdylib", "rlib"]